--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-index.html
+<html>
+<head>
+	<title>Product Factory</title>
+	<script type="text/javascript" src="angular.js"></script>
+	<script type="text/javascript">
+	
+	</script>
+</head>
+<body>
+
+</body>
+</html>
