--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html>
+<html ng-app="myApp">
 <head>
 	<title>Product Factory</title>
 	<script type="text/javascript" src="angular.js"></script>
 	<script type="text/javascript">
-	
+		var myAppModule = angular.module("myApp", []);
+		
 	</script>
 </head>
 <body>
