added table to display products

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		// create factory(attached to this module)
 		myAppModule.factory('productsFactory', function(){
-			$scope.products = [
+			var products = [
 				{name: "Keyboard", price: 149.99},
 				{name: "Mouse", price: 59.99},
 				{name: "Basketball", price: 59.99},
@@ -33,6 +33,20 @@
 	</script>
 </head>
 <body>
+	<div id="container" ng-controller="productsController">
+		<table>
+			<tr>
+				<td><button>Name</button></td>
+				<td><button>Price</button></td>
+				<td>Actions</td>
+			</tr>
+			<tr ng-repeat="product in products">
+				<td>{{ product.name }}</td>
+				<td>{{ product.price }}</td>
+				<td><a href="#">Delete Product</a></td>
+			</tr>
+		</table>
 
+	</div>
 </body>
 </html>
