--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			var products = [
 				{name: "Keyboard", price: 149.99},
 				{name: "Mouse", price: 59.99},
-				{name: "Basketball", price: 59.99},
+				{name: "Basketball", price: 24.99},
 			];
 
 			var factory = {}
@@ -26,10 +26,13 @@
 				products.push(product)
 			} 
 
+			// remove a product
+			factory.removeProduct = function(product){
+				console.log("Factory Removing",product)
+					products.splice(product,1);
+			}
+
 			return factory;
-
-
-
 
 		
 		});
@@ -52,30 +55,90 @@
 				$scope.newProduct = {};
 			}
 
+			$scope.removeProduct = function(product){
+				console.log("REMOVING", $scope.products.indexOf(product),1);
+				productsFactory.removeProduct($scope.products.indexOf(product),1);
+			}
+
+		$scope.predicate = 'name';
+		$scope.reverse = true;
+		$scope.order = function(predicate) {
+			$scope.reverse = ($scope.predicate === predicate) ? !$scope.reverse : false;
+			$scope.predicate = predicate;
+		};
+
 
 		})
 	</script>
+
+	<style type="text/css">
+	#container {
+		font-family: arial;
+		margin: 25px;
+	}
+
+	form p {
+		width: 200px;
+		display: inline-block;
+	}
+
+	table {
+		border: 1px solid black;
+	}
+
+	table tr td {
+		height: 40px;
+		width: 300px;
+	}
+	table tr td button, table tr td {
+		border: none;
+		background: white;
+		font-size: 1em;
+	}
+
+	table tr td button {
+		width: 100%;
+		text-align: left;
+	}
+	form input {
+		width: 150px;
+	}
+	#submitProd {
+	margin-left: 200px;
+	}
+
+	table tr td a, #submitProd {
+		background: black;
+		color: white;
+		padding: 5px 10px;
+		font-size: 1em;
+	}
+	</style>
 </head>
 <body>
 	<div id="container" ng-controller="productsController">
 		<form>
 			<p>Product Name:</p> <input type="text" ng-model="newProduct.name">
+			<br>
 			<p>Product Price:</p> <input type="number" step="0.01" ng-model="newProduct.price">
+			<br>
 			<input id="submitProd" type="submit" value="Add Product" ng-click="addProduct()">
 
 		</form>
 
-
+		<span style="font-size: 12px">Click on header to sort</span>
 		<table>
 			<tr>
-				<td><button>Name</button></td>
-				<td><button>Price</button></td>
+				<td><button ng-click="order('name')">Name</button>
+					<span class="sortorder" ng-show="predicate === 'name'" ng-class="{reverse:reverse}"></span></td>
+				<td><button ng-click="order('price')">Price</button>
+					<span class="sortorder" ng-show="predicate === 'price'" ng-class="{reverse:reverse}"></span></td>
 				<td>Actions</td>
 			</tr>
-			<tr ng-repeat="product in products">
+			<tr ng-repeat="product in products | orderBy:predicate:reverse">
 				<td>{{ product.name }}</td>
-				<td>{{ product.price }}</td>
-				<td><a href="#">Delete Product</a></td>
+				<td>${{ product.price }}</td>
+				<td><a href="#" ng-click="removeProduct(product)">Delete Product</a></td>
 			</tr>
 		</table>
 
